addressing PR feedback
- remove "---" from the end of example files to work well with up CLI

--- a/provider-gcp/examples/kms/secretciphertext.yaml
+++ b/provider-gcp/examples/kms/secretciphertext.yaml
@@ -8,7 +8,7 @@ spec:
   forProvider:
     cryptoKeySelector:
       matchLabels:
-        testing.upbound.io/example-name: cryptokey
+        testing.upbound.io/example-name: cryptokey1
     plaintextSecretRef:
       key: example-key
       name: example-secret
@@ -20,8 +20,8 @@ apiVersion: kms.gcp.upbound.io/v1beta1
 kind: CryptoKey
 metadata:
   labels:
-    testing.upbound.io/example-name: cryptokey
-  name: cryptokey
+    testing.upbound.io/example-name: cryptokey1
+  name: cryptokey1
 spec:
   forProvider:
     keyRingSelector:
@@ -41,5 +41,4 @@ spec:
   forProvider:
     location: global
 
----
 
